Fixing the send button on smaller screens part4

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,3 +90,7 @@ body {
       display: block;
   }
 }
+
+.right-2-custom {
+  right: calc(var(--spacing) * 6);
+}
